# October

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  English-Vietnamese.sqlite3  README.md  settings.toml
.github/workflows/: rust.yml
benches/: my_benchmark.rs
resources/: Che_Guevara.html  bresenham_line.html
resources/languages/: English-Vietnamese.sqlite3  test.sqlite3
resources/languages/English-Vietnamese/: data.toml
resources/languages/Test/: data.toml
src/: appfunctions.rs  basic.rs  datascreen.rs  elements.rs  file.rs  langscreen.rs  load.rs  main.rs  main.rs.old  mainscreen.rs  reviewscreen.rs  settings.rs  settingscreen.rs  structs.rs  testingscreens.rs  text.rs  traits.rs  types.rs
